syntax = "proto3";

option java_package = "be.tapped.vlaamsetv.auth.vtm";
option java_multiple_files = true;

// We only use this as a back-up.
// It is preferred to use the tokens as much as possible
message VTMGOCredentials {
  string user_name = 1;
  string password = 2;
}

message JWT {
  string token = 1;
}
